  * Include the full name of each menu category rather than only the
    portion relative to the parent heading to be clearer in long category
    lists.  Thanks, Christoph Berg.  (Closes: #511804)
  * Build-Depend on texlive rather than tetex-extra.  texlive appears to
    be sufficient for how Policy uses debiandoc-sgml and pulls in far
    fewer packages.

 -- Russ Allbery <rra@debian.org>  Mon, 23 Jun 2008 19:23:50 -0700

debian-policy (3.8.0.1) unstable; urgency=low

  * Don't attempt to register the non-existent debian-policy-process
    document.  Thanks, Adrian von Bidder.  (Closes: #484706)

 -- Russ Allbery <rra@debian.org>  Thu, 05 Jun 2008 13:13:01 -0700

debian-policy (3.8.0.0) unstable; urgency=low

  * Bug fix: "[PROPOSAL] "debian/README.source" file for packages with
    non-trivial source", thanks to Wouter Verhelst, Jörg Sommer, Colin Watson,
    and Junichi Uekawa                                       (Closes: #250202).
  * Bug fix: "[AMENDMENT 11/02/2008] Manual page encoding", thanks to
    Colin Watson                                             (Closes: #440420).
  * Bug fix: "[PROPOSAL] common interface for parallel building in
    DEB_BUILD_OPTIONS", thanks to Loïc Minier, Peter Samuelson, and Robert
    Millan                                                   (Closes: #209008).
  * Bug fix: "Please clarify splitting/syntax of DEB_BUILD_OPTIONS", thanks to
    Loïc Minier, Peter Samuelson, Robert Millan, and Guillem Jover
                                                             (Closes: #430649).
  * Bug fix: "Documentation for Breaks in dpkg", thanks to Ian Jackson
                                                             (Closes: #379150).
  * Bug fix: "support for wrapped Uploaders should now be mandatory"
                                                             (Closes: #431813).
  * Bug fix: "[PROPOSAL] Add should not embed code from other packages",
    thanks to Neil McGovern, Colin Watson, Bill Allombert, Steve Langasek,