@@ -1,78 +1,0 @@
-#!/bin/sh
-
-# Abort if any command returns an error value
-set -e
-
-# This is filled in by debian/rules
-package_name=#PACKAGE#
-
-# This script is called as the first step in removing the package from
-# the system.  This includes cases where the user explicitly asked for
-# the package to be removed, upgrade, automatic removal due to conflicts,
-# and deconfiguration due to temporary removal of a depended-on package.
-
-case "$1" in
-  remove)
-    # This package about to be removed.
-    :
-    if [ -L /usr/doc/$package_name ]; then
-        rm -f /usr/doc/$package_name
-    fi
-
-    # There are two sub-cases:
-    if test "${2+set}" = set; then
-      if test "$2" != in-favour; then
-        echo "$0: undocumented call to \`prerm $*'" 1>&2
-        exit 0
-      fi
-      # We are being removed because of a conflict with package $3
-      # (version $4), which is now being installed.
-      :
-
-    else
-      # The package is being removed in its own right.
-      :
-
-    fi ;;
-  deconfigure)
-    if test "$2" != in-favour || test "$5" != removing; then
-      echo "$0: undocumented call to \`prerm $*'" 1>&2
-      exit 0
-    fi
-    # Package $6 (version $7) which we depend on is being removed due
-    # to a conflict with package $3 (version $4), and this package is
-    # being deconfigured until $6 can be reinstalled.
-    :
-
-    ;;
-  upgrade)
-    # Prepare to upgrade FROM THIS VERSION of this package to version $2.
-    :
-    if [ -L /usr/doc/$package_name ]; then
-        rm -f /usr/doc/$package_name
-    fi
-
-    ;;
-  failed-upgrade)
-    # Prepare to upgrade from version $2 of this package TO THIS VERSION.
-    # This is only used if the old version's prerm couldn't handle it,
-    # and returned non-zero.  (Fix old prerm bugs here.)
-    :
-
-    ;;
-  *) echo "$0: didn't understand being called with \`$1'" 1>&2
-     exit 0;;
-esac
-
-
-
-if [ -x /usr/sbin/install-docs ]; then
-    /usr/sbin/install-docs -r debian-policy
-    /usr/sbin/install-docs -r debian-menu-policy
-    /usr/sbin/install-docs -r debian-mime-policy
-    /usr/sbin/install-docs -r debian-perl-policy
-    /usr/sbin/install-docs -r debconf-spec
-    /usr/sbin/install-docs -r fhs
-fi
-
-exit 0
